--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <li class="menu-list-item">Series</li>
             <li class="menu-list-item">Popular</li>
             <li class="menu-list-item">
+              <form class="user__form">
               <input
                 class="user_search"
                 type="text"
                 placeholder="search movie"
               />
-            </li>
-            <li class="menu-list-item">
               <button class="search_btn">Search</button>
+            </form>
             </li>
           </ul>
         </div>
